<resources>
    <string name="app_name">CovoiCar</string>

    <string name="title_section1">Vos trajets</string>
    <string name="title_section2">Profil</string>
    <string name="title_section3">Recherche</string>
    <string name="title_section4">Proposer un trajet</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="Ceconnexion">Se connecter</string>
    <string name="ou">ou</string>
    <string name="inscription">S\'inscrire</string>
    <string name="tilte_connexion">Bienvenue dans l\'Application</string>

    <string name="info">Pas encore membre ?</string>
    <string name="inscriptionLogin">Inscrivez-vous</string>

    <string name="email">E-mail</string>
    <string name="password">Mot de passe</string>
    <string name="confirmation">Confirmation</string>

    <string name="gender">Civilité</string>
    <string name="name">Prénom</string>
    <string name="lastName">Nom</string>
    <string name="birthday">Année de naissance</string>
    <string name="inscrption">Inscription</string>
    <string name="connexion">Connexion</string>

    <string name="start">De (lieu de rdv précis)</string>
    <string name="arrival">Á (lieu d\'arrivée précis)</string>
    <string name="highway">Autoroute</string>
    <string name="roundTrip">Aller-Retour</string>
    <string name="dateStart">Date de départ</string>
    <string name="hoursStart">Heure de départ </string>
    <string name="datesArrival">Date de retour</string>
    <string name="hoursArrival">Heure de retour </string>
    <string name="continuer">Continuer</string>
    <string name="search">Rechercher</string>
    <string name="comment">Commentaire de trajet</string>
    <string name="modify">Modifier</string>
    <string name="numberPlace">Nombre de place :</string>
    <string name="reservez">Réservez en ligne</string>

    <string name="action_deconnexion">Deconnexion</string>

    <string name="action_settings">Settings</string>

    <string-array name="gender_array">
        <item>Civilité</item>
        <item>Homme</item>
        <item>Femme</item>
    </string-array>

</resources>
