<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/connexion"
    android:background="@android:color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:id="@+id/linearConnexion">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Ceconnexion"
                android:textSize="20dp"
                android:id="@+id/buttonConnexion"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ou"
                android:textSize="20dp"
                android:layout_alignBottom="@+id/buttonConnection"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:text="@string/inscription"
                android:id="@+id/buttonInscription"
                android:layout_gravity="center_horizontal" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/tilte_connexion"
            android:id="@+id/textView4Connexion"
            android:paddingBottom="20dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView"
            android:layout_below="@+id/textView4Connexion"
            android:src="@drawable/logo_covoircar"
            android:layout_above="@+id/linearConnexion"
            android:layout_centerHorizontal="true"
            android:paddingBottom="10dp" />

    </RelativeLayout>
</FrameLayout>
