<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/connexion"
        android:id="@+id/textView9"
        android:layout_centerHorizontal="true"/>

    <View
        android:id="@+id/view1Login"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_above="@+id/relativeLogin"
        android:layout_centerVertical="true"
        android:background="#cfcfcf" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:id="@+id/relativeLogin">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/relativeEmailLogin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:id="@+id/textView10"
                android:layout_marginTop="28dp"
                android:layout_centerVertical="true"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="13"
                android:background="#00000000"
                android:hint="@string/email"
                android:id="@+id/emailLogin"
                android:layout_alignParentEnd="true" />
        </RelativeLayout>

        <View
            android:id="@+id/view2Login"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_below="@+id/relativeEmailLogin"
            android:layout_centerVertical="true"
            android:background="#cfcfcf" />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/relativePasswordLogin"
            android:layout_below="@+id/view2Login">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:id="@+id/textView11"
                android:layout_centerVertical="true"
                android:layout_marginTop="28dp" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:background="#00000000"
                android:hint="@string/password"
                android:ems="13"
                android:id="@+id/passwordLogin"
                android:layout_alignParentEnd="true" />

        </RelativeLayout>

        <View
            android:id="@+id/view3Login"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_below="@+id/relativePasswordLogin"
            android:layout_centerVertical="true"
            android:background="#cfcfcf" />
    </RelativeLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relativeLogin"
        android:text="New Button"
        android:id="@+id/buttonLogin"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>