<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:orientation="vertical" android:layout_width="match_parent"
android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Inscription"
            android:layout_centerHorizontal="true"
            android:id="@+id/titleRegister"
            android:paddingBottom="20dp" />

        <View
            android:id="@+id/view10"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_below="@+id/titleRegister"
            android:layout_centerVertical="true"
            android:background="#cfcfcf" />

    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/relativeGender"
        android:layout_below="@+id/titleRegister">

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:id="@+id/spinnerGender"/>
    </RelativeLayout>

    <View
        android:id="@+id/view1"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_below="@+id/relativeGender"
        android:layout_centerVertical="true"
        android:background="#cfcfcf" />

    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/relativeName"
        android:layout_below="@+id/view1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:id="@+id/textFirstName"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="false"
            android:layout_centerVertical="true" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:inputType="textPersonName"
            android:hint="@string/name"
            android:background="#00000000"
            android:ems="10"
            android:id="@+id/editFirstName"
            android:layout_alignParentRight="true" />
    </RelativeLayout>

    <View
        android:id="@+id/view2"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_below="@+id/relativeName"
        android:layout_centerVertical="true"
        android:background="#cfcfcf" />

    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/relativeLastName"
        android:layout_below="@+id/view2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lastName"
            android:id="@+id/textLasttName"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="false"
            android:layout_centerVertical="true" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:inputType="textPersonName"
            android:hint="@string/lastName"
            android:background="#00000000"
            android:ems="10"
            android:id="@+id/editLasttName"
            android:layout_alignParentRight="true" />
    </RelativeLayout>

    <View
        android:id="@+id/view3"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_below="@+id/relativeLastName"
        android:layout_centerVertical="true"
        android:background="#cfcfcf" />

    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/relativeBirthday"
        android:layout_below="@+id/view3">

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:id="@+id/spinnerBirthday"/>
    </RelativeLayout>

    <View
        android:id="@+id/view4"
        android:layout_width="wrap_content"
        android:layout_height="5dp"
        android:layout_below="@+id/relativeBirthday"
        android:layout_centerVertical="true"
        android:background="#cfcfcf" />

    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/relativeEmail"
        android:layout_below="@+id/view4">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:id="@+id/textEmailRegister"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="false"
            android:layout_centerVertical="true" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:hint="@string/email"
            android:background="#00000000"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/editEmailRegister"
            android:layout_alignParentRight="true" />
    </RelativeLayout>

    <View
        android:id="@+id/view5"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_below="@+id/relativeEmail"
        android:layout_centerVertical="true"
        android:background="#cfcfcf" />

    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/relativePasswordLogin"
        android:layout_below="@+id/view5">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:text="@string/password"
            android:id="@+id/textPasswordRegister"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="false"
            android:layout_centerVertical="true" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:hint="@string/password"
            android:background="#00000000"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/editPasswordRegister"
            android:layout_alignParentRight="true" />
    </RelativeLayout>

    <View
        android:id="@+id/view6"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_below="@+id/relativePasswordLogin"
        android:layout_centerVertical="true"
        android:background="#cfcfcf" />

    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/relativeConfirmation"
        android:layout_below="@+id/view6">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirmation"
            android:id="@+id/textConfirmation"
            android:layout_weight="1"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="false"
            android:layout_centerVertical="true" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:hint="@string/password"
            android:background="#00000000"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/editConformation"
            android:layout_alignParentRight="true"/>

    </RelativeLayout>

    <View
        android:id="@+id/view7"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_below="@+id/relativeConfirmation"
        android:layout_centerVertical="true"
        android:background="#cfcfcf" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view7"
        android:text="@string/connexion"
        android:layout_centerHorizontal="true"
        android:id="@+id/buttonConnexionRegister" />
    </RelativeLayout>


</FrameLayout>